--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,4 +1,6 @@
 {
-	"dependencies": {
-	}
+  "dependencies": {
+    "com.unity.progrids": "3.0.3-preview.0",
+    "com.unity.shadergraph": "1.1.9-preview"
+  }
 }
